--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <center>
         <div class="container">
-                <h1 class="display-5">BeamStats Viewer</h1>    
+                <h1 class="display-5">BeamStats</h1>    
     <hr class="m-y-2">
     <center>
         <form id="formThing" action="" method="">
