--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>BeamStats</title>
+    <!-- Jetpack Open Graph Tags -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="BeamStats" />
+<meta property="og:description" content="Welcome To The BeamStats Page Just Enter your Beam Name Your Good To Go" />
+<meta property="og:url" content="http://streamstats.github.io/BeamStats/" />
+<meta property="og:site_name" content="http://streamstats.github.io/BeamStats/" />
+<meta property="og:image" content="http://www.twitch.tv/favicon.ico" />
+<meta property="og:locale" content="en_US" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
