--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 <meta property="og:description" content="Welcome To The BeamStats Page Just Enter your Beam Name Your Good To Go" />
 <meta property="og:url" content="http://streamstats.github.io/BeamStats/" />
 <meta property="og:site_name" content="http://streamstats.github.io/BeamStats/" />
-<meta property="og:image" content="http://www.twitch.tv/favicon.ico" />
 <meta property="og:locale" content="en_US" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
 <center>
+    <div class="page-header">
+  <h1>Welcome To</h1>
+</div>
         <div class="container">
                 <h1 class="display-5">BeamStats</h1>    
     <hr class="m-y-2">
     <center>
         <form id="formThing" action="" method="">
+            
     <input type="text" id="inputText" class="form-control" style="width: 200px;display: inline-block;">
     <input type="submit" id="submit" class="btn btn-primary">
     </form>
