--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta property="og:url" content="http://streamstats.github.io/BeamStats/" />
 <meta property="og:site_name" content="http://streamstats.github.io/BeamStats/" />
 <meta property="og:locale" content="en_US" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
 </head>
 <body>
