--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>BeamStats</title>
     <!-- Jetpack Open Graph Tags -->
-<meta property="og:type" content="website" />
+<meta property="og:type" content="StreamStats" />
 <meta property="og:title" content="BeamStats" />
 <meta property="og:description" content="Welcome To The BeamStats Page Just Enter your Beam Name Your Good To Go" />
 <meta property="og:url" content="http://streamstats.github.io/BeamStats/" />
