--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta property="og:locale" content="en_US" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <link rel="stylesheet" href="css/scrollbar.css" type="text/css" />
 </head>
 <body>
 <center>
