--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <link rel="stylesheet" href="css/scrollbar.css" type="text/css" />
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
 </head>
 <body>
 <center>
@@ -26,7 +28,7 @@
         <form id="formThing" action="" method="">
             
     <input type="text" id="inputText" class="form-control" style="width: 200px;display: inline-block;">
-    <input type="submit" id="submit" class="btn btn-primary">
+    <input type="submit" id="submit"i class="em em-white_check_mark"class="btn btn-primary">
     </form>
     </center>
         <div class="profile">
