--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
         </div>
         </div>
-<footer>&copy; StreamStats 2016</footer>
+<footer i class="em em-green_heart">&copy; StreamStats 2016 </footer>
 </center>
     
     <script type="text/javascript" src="js/jquery.min.js"></script>
