--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:title" content="BeamStats" />
 <meta property="og:description" content="Welcome To The BeamStats Page Just Enter your Beam Name Your Good To Go" />
 <meta property="og:url" content="http://streamstats.github.io/BeamStats/" />
-<meta property="og:site_name" content="http://streamstats.github.io/BeamStats/" />
+<meta property="og:site_name" content="http://streamstats.github.io/BeamStats" />
 <meta property="og:locale" content="en_US" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
