--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/scrollbar.css" type="text/css" />
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <style>
-<script type="text/javascript"> var created = moment('joined').format('DD-MM-YYYY') </script>
+<script type="text/javascript">console.log(moment('Date;').format('DD-MM-YYYY')) </script>
 </style>
     
 </head>
