--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" href="css/scrollbar.css" type="text/css" />
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <style>
-<script type="text/javascript">console.log(moment('Date;').format('DD-MM-YYYY')) </script>
+<script type="text/javascript">
+var up = "Up And Running";
+console.log(up) </script>
 </style>
     
 </head>
@@ -45,7 +47,6 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
     
 </body>
 </html>
