--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>BeamStats</title>
     <!-- Jetpack Open Graph Tags  -->
 <meta property="og:type" content="StreamStats" />
-<meta property="og:title" content="BeamStats" />
-<meta property="og:description" content="Welcome To The BeamStats Page Just Enter your Beam Name Your Good To Go" />
-<meta property="og:url" content="http://streamstats.github.io/BeamStats/" />
-<meta property="og:site_name" content="http://streamstats.github.io/BeamStats" />
+<meta property="og:title" content="MixerStats" />
+<meta property="og:description" content="Welcome To The MixerStats Page Just Enter your Beam Name Your Good To Go" />
+<meta property="og:url" content="http://streamstats.github.io/MixerStats/" />
+<meta property="og:site_name" content="http://streamstats.github.io/MixerStats" />
 <meta property="og:locale" content="en_US" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css" type="text/css" />
@@ -28,7 +28,7 @@ console.log(up) </script>
   <h1>Welcome To</h1>
 </div>
         <div class="container">
-                <h1 class="display-5">BeamStats</h1>    
+                <h1 class="display-5">MixerStats</h1>    
     <hr class="m-y-2">
     <center>
         <form id="formThing" action="" method="">
