--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BeamStats</title>
+    <title>MixerStats</title>
     <!-- Jetpack Open Graph Tags  -->
 <meta property="og:type" content="StreamStats" />
 <meta property="og:title" content="MixerStats" />
